--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,16 @@
   "routes": [
     {
       "src": "/webhook",
-      "dest": "/index.js",
+      "dest": "index.js",
       "methods": ["GET", "POST"]
     },
     {
+      "src": "/images/(.*)",
+      "dest": "public/images/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.js"
+      "dest": "index.js"
     }
   ]
 }
