--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "fb-chat-bot",
+  "name": "amani-chatbot",
   "version": "1.0.0",
-  "description": "Facebook Messenger Bot with Gemini AI",
-  "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "build": "echo 'Building...'",
+    "proxy-check": "node utils/proxy-checker.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.1",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3",
-    "request": "^2.88.2"
+    "socks-proxy-agent": "^8.0.2",
+    "node-cache": "^5.1.2",
+    "dotenv": "^16.4.1"
   },
   "engines": {
     "node": "18.x"
